fixed overflow-x

--- a/css/component.css
+++ b/css/component.css
@@ -135,7 +135,7 @@ html.js,
 .js .page {
 	position: relative;
 	z-index: 5;
-	overflow: hidden;
+	overflow-x: hidden;
 	width: 100%;
 	height: 100vh;
 	pointer-events: auto;
@@ -290,6 +290,9 @@ html.js,
 	transform: rotate3d(0, 0, 1, -45deg);
 }
 @media screen and (max-width: 60em) {
+	body {
+		overflow-x: hidden;
+	}
 	.info {
 		max-width: 100%;
 	}
@@ -344,8 +347,8 @@ html.js,
 	}
 }
 @media screen and (max-width: 40em) {
-	.page{
-		overflow: auto;
+	body {
+		overflow-x: hidden;
 	}
 	.js .pages-nav {
 		display: block;
