--- a/css/styles.css
+++ b/css/styles.css
@@ -18,24 +18,12 @@
     display: none; 
 }
 
-@media (max-width: 600px) {
-    .page {
-		overflow-x: hidden;
-		overflow-y: auto;
-    }
-}
-@media screen and (max-width:29.9999em) {
+@media screen and (max-width: 40em) {
 	.page {
 		overflow-x: hidden;
-		overflow-y: auto;
-    }
-}
-@media screen and (max-width: 40em) {
-	.page{
-		overflow: auto;;
 	}
 	.header {
-		padding: 25px 20px 1em;
+		padding: 20px 20px 1em;
 	}
 	.header__title {
 		font-size: 1.8em;
